Mqpacker bugs with logo on mobile has been killed

--- a/sass/blocks/slim-block.scss
+++ b/sass/blocks/slim-block.scss
@@ -45,9 +45,12 @@
   &--logo {
     padding-top: 22px;
     padding-bottom: 22px;
-    padding-left: 0;
 
     text-align: center;
+
+    @media #{$mobile-widths} {
+      padding-left: 0;
+    }
 
     @media #{$tablet-widths} {
       width: 48.3%;
